--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
             <li>item</li>
         </nav>
     </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
